--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,13 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  more:       rgb(159, 255, 202),
+  less:       #bee7fa,
+  tryMe:      rgb(47, 219, 31),
+  shock:      rgb(248, 220, 253),
+  bg1:        rgb(240, 230, 140),
+  bg2:        rgb(34, 34, 34)
 );
 
 
